--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,14 @@
             "homepage": "http://www.avers.co/"
         }
     ],
+   "require": {
+        "vendor/package": "1.3.2",
+        "vendor/package2": "1.*",
+        "vendor/package3": "^2.0.3"
+    },
     "autoload": {
         "psr-4": {
-           "avers-image-uploader\\": "src"
+           "avers\\avers-image-uploader\\": "src"
         }
     }
 }
