--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "avers-image-uploader/image-uploader",
+    "name": "avers-file-uploader/file-uploader",
     "description": "this is image uploader",
     "keywords": ["yii2", "extension", "widget","file", "form", "upload", "plugin"],
-    "homepage": "https://github.com/seyedmohamadhoseynheydar/avers-image-uploader",
+    "homepage": "https://github.com/seyedmohamadhoseynheydar/avers-file-uploader",
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "authors": [
@@ -17,7 +17,7 @@
     },
     "autoload": {
         "psr-4": {
-           "avers\\aversImageUploader\\": "src"
+           "avers\\aversFileUploader\\": "src"
         }
     }
 }
