--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,11 @@
         }
     ],
    "require": {
-      
+      "php": ">=5.4.0",
+        "yiisoft/yii2": ">=2.0.6",
+        "yiisoft/yii2-bootstrap": "*",
+        "yiisoft/yii2-swiftmailer": "*",
+       "yiisoft/yii2-imagine": "*",
     },
     "autoload": {
         "psr-4": {
