--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "avers-file-uploader/file-uploader",
     "description": "this is image uploader",
-    "keywords": ["yii2", "extension", "widget","file", "form", "upload", "plugin"],
+    "keywords": ["yii2", "extension", "widget","file", "form", "upload", "plugin", "avers"],
     "homepage": "https://github.com/seyedmohamadhoseynheydar/avers-file-uploader",
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
